# github-bot

./: .env.example  .gitignore  README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: ci.yml
app/: __main__.py  bot.py  config.py  core.py  errors.py  log.py  setup.py  status.py  utils.py
app/common/: cache.py  hooks.py  linker.py  message_moving.py
app/common/message_moving/: __init__.py  conversion.py  moved_message.py  subtext.py  webhooks.py
app/components/: __init__.py  accept_invite.py  activity_status.py  autoclose.py  close_help_post.py  developer.py  docs.py  extras.py  fixup_embeds.py  lock_old_posts.py  message_filter.py  move_message.py  status.py  xkcd_mentions.py  zig_codeblocks.py
app/components/entity_mentions/: __init__.py  cache.py  code_links.py  comments.py  discussions.py  fmt.py  integration.py  models.py  resolution.py
app/components/entity_mentions/code_links/: __init__.py  code_links.py
app/components/entity_mentions/comments/: __init__.py  fetching.py  integration.py
app/components/github_integration/: __init__.py  code_links.py  commit_links.py  commit_types.py  commits.py  emoji.py  models.py
app/components/github_integration/comments/: __init__.py  discussions.py  fetching.py  integration.py
app/components/github_integration/entities/: __init__.py  cache.py  discussions.py  fmt.py  integration.py  resolution.py
app/components/github_integration/mentions/: __init__.py  cache.py  discussions.py  fmt.py  integration.py  resolution.py
app/components/github_integration/webhooks/: __init__.py  commits.py  core.py  discussions.py  integration.py  issues.py  misc.py  prs.py  utils.py
app/utils/: __init__.py  hooks.py  message_data.py  webhooks.py
tests/: conftest.py  test_close_help_post.py  test_message_moving.py  test_meta.py  test_utils.py
tests/fixtures/: __init__.py  config.py  hooks.py
tests/hooks/: test_delete_hook.py  test_edit_hook.py  test_message_linker.py  utils.py
tests/utils/: __init__.py  kitposer.py
