[project]
name = "ghostty-bot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Mitchell Hashimoto", email = "m@mitchellh.com" },
  { name = "trag1c", email = "dev@jakubr.me" },
]
dependencies = [
  "discord-py~=2.4",
  "githubkit==0.12.11",
  "pydantic>=2.10.6,<3",
  "python-dotenv==1.0.1",
  "sentry-sdk>=2.3.1,<3",
  "zig-codeblocks==0.3.3",
  "httpx~=0.28.0",
]

[dependency-groups]
dev = [
  "ruff~=0.12.0",
  "pyright~=1.1.402",
  "taplo>=0.9.3",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = ["ignore::Warning"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM",
  "ERA",
  "D",
  "FIX",
  "S",
  "ANN401",
  "ISC001",
  "T201",
  "TD003",
  "PLR2004",
]
mccabe.max-complexity = 20
pylint.max-branches = 20
pylint.max-returns = 15
isort.known-local-folder = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["FBT", "SLF001"]

[tool.ruff.lint.flake8-import-conventions.aliases]
discord = "dc"

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownLambdaType = false
